sample/error/top_import-rec_1.bfr
open import "top_import-rec_2.bfr"

codegen []